fixes:bestSeller productCard img hover z-index carousel btns

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -646,6 +646,7 @@ table th {
   width: 100%;
   height: 100%;
   background: url("./img/banner-fs.jpg") center 0 no-repeat;
+  z-index: -1;
 }
 .home-screen h2 {
   position: relative;
@@ -680,7 +681,7 @@ table th {
 .home-screen .swiper-button-next {
   width: 8rem;
   height: 25rem;
-  top: -23rem;
+  top: -25rem;
   border-radius: 0;
   color: #eaeded;
   background: transparent;
